--- a/Relationer/Relationer.html
+++ b/Relationer/Relationer.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-	<h>PAR I SVAR - RELATIONER</h>
+	<h><u>PAR I SVAR - RELATIONER</u></h>
 	
 	<br>
 	<br>
 	
-	<button id="startsida" type="button" class="button" onclick="document.location='../index.html'">Startsida</button>
+	<button id="startsida" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='../index.html'">Startsida</button>
 	<button id="fråga" type="button" class="button" style="background-color: #9AE48B" onclick="FrågaRelationerFunc()">Ny Fråga</button>
 	
 	<br>
@@ -37,5 +37,10 @@
 	</div>
 	
 	<button id="ny fråga" type="button" class="button" style="background-color: #FF8D35" onclick="NyFrågaRelationerFunc()">Fått frågan tidigare? Slumpa ny!</button>
+		
+	<br>
+	<br>
+	
+	<p1>Ett spel av Linus Ström</p1>
 </body>
 </html>
