--- a/Alla frågor/Alla frågor.html
+++ b/Alla frågor/Alla frågor.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-	<h><u>PAR I SVAR - ALLA FRÅGOR</u></h>
+	<h>PAR I SVAR - ALLA FRÅGOR</h>
 	
 	<br>
 	<br>
 	
-	<button id="startsida" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='../index.html'">Startsida</button>
+	<button id="startsida" type="button" class="button" onclick="document.location='../index.html'">Startsida</button>
 	<button id="fråga" type="button" class="button" style="background-color: #9AE48B" onclick="FrågaAllaFunc()">Ny Fråga</button>
 	
 	<br>
@@ -32,10 +32,5 @@
 	</div>
 	
 	<button id="ny fråga" type="button" class="button" style="background-color: #FF8D35" onclick="NyFrågaAllaFunc()">Fått frågan tidigare? Slumpa ny!</button>
-	
-	<br>
-	<br>
-	
-	<p1>Ett spel av Linus Ström</p1>
 </body>
 </html>
