--- a/Regler.html
+++ b/Regler.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="styledefault.css">
 <!-- Importera Scripts -->
 <script src="scripts.js"></script>
-<title>Par i svar - Regler</title>
+<title>Regler</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 	<br>
 	
 	<div class="border">
-	<h><u>1. Grundregler</u></h>
+	<h>Grundregler</h>
 	<p>Par i Svar är ett partyspel som spelas i lag av 2. Det lag som vet mest om varandra vinner. 
 	<br>
 	<br>
@@ -42,8 +42,7 @@
 	<br>
 	
 	<div class="border">
-	<h><u>2. Frågetyper</u></h>
-	<p>Spelet har olika frågetyper. Frågetyper bestämmer vem som ska svara och hur man ska svara på en fråga.</p>
+	<h>Kategorier</h>
 	<h1>Vad är?</h1>
 	<p>Båda i laget vars tur det är svarar på en fråga. Frågan handlar antingen om någon i lagen eller om lagkamraternas relation. Svarar båda lika får laget 1 poäng. Synonymer eller olika svar som betyder samma sak räknas. Vid behov röstar alla spelare om svaret räknas eller inte.</p>
 	<br>
@@ -58,7 +57,7 @@
 	<br>
 	
 	<div class="border">
-	<h><u>3. Spelvarianter</u></h>
+	<h>Spelvarianter</h>
 	<p>Om man vill mixa upp spelet kan man spela en av dessa varianten. Spela med samma regler som det vanliga spelet men med en tvist. </p>
 	<br>
 	
