--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 <link rel="stylesheet" href="styledefault.css">
 <!-- Importera Scripts -->
 <script src="scripts.js"></script>
-<title>Par i Svar - Startsida</title>
+<title>Par i Svar</title>
 </head>
 <body>
-	<h><u>PAR I SVAR</u></h>
+	<h>PAR I SVAR</h>
 	<br>
-	
 	<h1>Hur bra känner du till din lagkamrat?</h1>
 	
 	<br>
 	<br>
 	
-	<button id="Regler" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='Regler.html'" target="_blank">Regler</button>
+	<button id="Regler" type="button" class="button" onclick="document.location='Regler.html'" target="_blank">Regler</button>
 	
-	<div class="border">
-	<h1>Välj frågepacket:</h1>
+	<h1>Välj spelvariant:</h1>
 	
 	<button id="Relationer" type="button" class="button" style="background-color: #E7A8EB" onclick="document.location='Relationer/Relationer.html'">Frågor för Relationer</button>
 	
@@ -33,13 +31,5 @@
 	<br>
 	
 	<button id="Alla" type="button" class="button" style="background-color: #39CAFF" onclick="document.location='Alla frågor/Alla frågor.html'">Alla Frågor (Mixat)</button>
-	<br>
-	</div>
-	<br>
-		
-	<br>
-	<br>
-	
-	<p1>Ett spel av Linus Ström</p1>
 </body>
 </html>
