--- a/Regler.html
+++ b/Regler.html
@@ -15,7 +15,7 @@
 	<br>
 	<br>
 	
-	<button id="Startsida" type="button" class="button" onclick="document.location='index.html'">Startsida</button>
+	<button id="Startsida" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='index.html'">Startsida</button>
 	
 	<br>
 	<br>
@@ -26,7 +26,7 @@
 	<p>Par i Svar är ett partyspel som spelas i lag av 2. Det lag som vet mest om varandra vinner. 
 	<br>
 	<br>
-	Alla spelare har ett varsitt papper eller whiteboardtavla där man skriver sina svar. Varje lag har en blå och en röd spelare. Vem som är Röd och vem som är Blå är viktigt att komma ihåg under spelets gång. 
+	Alla spelare har ett varsitt papper eller whiteboardtavla där man skriver sina svar. Varje lag har en <span style="color: deepskyblue">blå</span> och en <span style="color: red">röd</span> spelare. Vem som är <span style="color: red">röd</span> och vem som är <span style="color: deepskyblue">blå</span> är viktigt att komma ihåg under spelets gång. 
 	<br>
  	<br>
 	Under spelets gång turas lagen om att svara på frågor. Turen går runt medsols. Man skriver ner sitt svar och visar det inte förrän alla som ska svara på frågan har svarat, inte ens till sin lagkamrat. 
@@ -58,7 +58,30 @@
 	<br>
 	
 	<div class="border">
-	<h><u>3. Spelvarianter</u></h>
+	<h><u>3. Frågepaket</u></h>
+	<p>De olika fråge paketen innehåller olika frågor. Välj ett som passar bra till sällskapet du spelar med.</p>
+	<br>
+	<h1>Relationer</h1>
+	<p>Är till för att spelas mellan par. Innehåller frågor inom kategorierna Intimt, Nöjen, Jobb och Hem, Dåtid och Framtid, Personlighet och Blandat.</p>
+	<br>
+		
+	<h1>Vänner</h1>
+	<p>Är till för att spelas mellan vänner. Innehåller frågor inom kategorierna Nöjen, Jobb och Hem, Dåtid och Framtid, Personlighet och Blandat.</p>
+	<br>
+		
+	<h1>Barn</h1>
+	<p>Är tillämpad för barn. Innehåller frågor inom kategorin Frågor för barn.</p>
+	<br>
+		
+	<h1>Alla frågor</h1>
+	<p>En mix av alla övriga frågepaket. Innehåller alla frågor från alla kategorier.</p>
+	<br>
+		
+	</div>
+	<br>
+	
+	<div class="border">
+	<h><u>4. Spelvarianter</u></h>
 	<p>Om man vill mixa upp spelet kan man spela en av dessa varianten. Spela med samma regler som det vanliga spelet men med en tvist. </p>
 	<br>
 	
@@ -71,13 +94,13 @@
 	<br>
 	
 	<h1>Alla mot alla</h1>
-	<p>Här är man inte i lag utan man spelar alla mot alla. Svarar du lika som någon eller några annan i spelet så får alla som svarade samma poäng. På kategorin Vem är? så kan man svara vem som helst i spelet.</p>
+	<p>Här är man inte i lag utan man spelar alla mot alla. Svarar du lika som någon eller några annan i spelet så får alla som svarade samma poäng. På kategorin Vem är? så kan man svara vem som helst i spelet. På kategorin Vad är? får man turas om vem som frågan handlar om.</p>
 	</div>
 	
 	<br>
 	<br>
 	
-	<button id="Startsida2" type="button" class="button" onclick="document.location='index.html'">Startsida</button>
+	<button id="Startsida2" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='index.html'">Startsida</button>
 	
 	<br>
 	<br>
