--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 	<button id="Regler" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='Regler.html'" target="_blank">Regler</button>
 	
 	<div class="border">
-	<h1>Välj frågepacket:</h1>
+	<h1>Välj frågepaket:</h1>
 	
-	<button id="Relationer" type="button" class="button" style="background-color: #E7A8EB" onclick="document.location='Relationer/Relationer.html'">Frågor för Relationer</button>
+	<button id="Relationer" type="button" class="button" style="background-color: #E7A8EB" onclick="document.location='Relationer/Relationer.html'">Relationer</button>
 	
+	<button id="Vänner" type="button" class="button" style="background-color: #FFDF59" onclick="document.location='Vänner/Vänner.html'">Vänner</button>
+		
 	<br>
 	
-	<button id="Vänner" type="button" class="button" style="background-color: #FFDF59" onclick="document.location='Vänner/Vänner.html'">Frågor för Vänner</button>
+	<button id="Barn" type="button" class="button" style="background-color: #21FFB6" onclick="document.location='Barn/Barn.html'">Barn</button>
 	
-	<br>
-	
-	<button id="Alla" type="button" class="button" style="background-color: #39CAFF" onclick="document.location='Alla frågor/Alla frågor.html'">Alla Frågor (Mixat)</button>
+	<button id="Alla" type="button" class="button" style="background-color: #39CAFF" onclick="document.location='Alla frågor/Alla frågor.html'">Alla Packet</button>
 	<br>
 	</div>
 	<br>
