--- a/index.html
+++ b/index.html
@@ -5,41 +5,27 @@
 <!-- Formarterar dokumentet -->
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <!-- Importera JS -->
-<link rel="stylesheet" href="styledefault.css">
-<!-- Importera Scripts -->
-<script src="scripts.js"></script>
-<title>Par i Svar - Startsida</title>
+<link rel="stylesheet" href="Par i Svar/styledefault.css">
+<style>
+body {
+  background-image: url('https://images.wallpapersden.com/image/download/cool-4k-pattern_bGduZWyUmZqaraWkpJRobWllrWdma2U.jpg');
+}
+</style>
+<title>Webb Spel av Linus Ström</title>
 </head>
+
 <body>
-	<h><u>PAR I SVAR</u></h>
-	<br>
-	
-	<h1>Hur bra känner du till din lagkamrat?</h1>
-	
 	<br>
 	<br>
-	
-	<button id="Regler" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='Regler.html'" target="_blank">Regler</button>
-	
-	<div class="border">
-	<h1>Välj frågepaket:</h1>
-	
-	<button id="Relationer" type="button" class="button" style="background-color: #E7A8EB" onclick="document.location='Relationer/Relationer.html'">Relationer</button>
-	
-	<button id="Vänner" type="button" class="button" style="background-color: #FFDF59" onclick="document.location='Vänner/Vänner.html'">Vänner</button>
-		
-	<br>
-	
-	<button id="Barn" type="button" class="button" style="background-color: #21FFB6" onclick="document.location='Barn/Barn.html'">Barn</button>
-	
-	<button id="Alla" type="button" class="button" style="background-color: #39CAFF" onclick="document.location='Alla frågor/Alla frågor.html'">Alla Packet</button>
-	<br>
-	</div>
-	<br>
-		
+	<h style="font-size: 80px"><u>Webbspel av Linus Ström</u></h>
 	<br>
 	<br>
-	
-	<p1>Ett spel av Linus Ström</p1>
+	<br>
+	<h1>Spel:</h1>
+	<br>
+	<button id="Par i Svar" type="button" class="button" style="background-image: url('https://wallpaperaccess.com/full/1963258.png'); font-size: 60px" onclick="document.location='Par i Svar/Par i Svar.html'">Par i Svar</button>
+	<br>
+	<br>
+	<button id="Tre i Rad" type="button" class="button" style="background-image: url('https://wallpaperaccess.com/full/2078969.jpg'); font-size: 60px" onclick="document.location='Tre i Rad/index.html'">Tre i Rad</button>
 </body>
 </html>
