--- a/Par i Svar/Regler.html
+++ b/Par i Svar/Regler.html
@@ -15,7 +15,7 @@
 	<br>
 	<br>
 	
-	<button id="Startsida" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='index.html'">Startsida</button>
+	<button id="Startsida" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='Par i Svar.html'">Startsida</button>
 	
 	<br>
 	<br>
@@ -59,7 +59,7 @@
 	
 	<div class="border">
 	<h><u>3. Frågepaket</u></h>
-	<p>De olika fråge paketen innehåller olika frågor. Välj ett som passar bra till sällskapet du spelar med.</p>
+	<p>De olika frågepaketen innehåller olika frågor. Välj ett som passar bra till sällskapet du spelar med.</p>
 	<br>
 	<h1>Relationer</h1>
 	<p>Är till för att spelas mellan par. Innehåller frågor inom kategorierna Intimt, Nöjen, Jobb och Hem, Dåtid och Framtid, Personlighet och Blandat.</p>
