--- a/Par i Svar/Vänner/Vänner.html
+++ b/Par i Svar/Vänner/Vänner.html
@@ -17,7 +17,7 @@
 	<br>
 	<br>
 	
-	<button id="startsida" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='../index.html'">Startsida</button>
+	<button id="startsida" type="button" class="button" style="background-color: #C8C8C8" onclick="document.location='../Par i Svar.html'">Startsida</button>
 	<button id="fråga" type="button" class="button" style="background-color: #9AE48B" onclick="FrågaVännerFunc()">Ny Fråga</button>
 	
 	<br>
