--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="Par i Svar/styledefault.css">
 <style>
 body {
-  background-image: url('https://images.wallpapersden.com/image/download/cool-4k-pattern_bGduZWyUmZqaraWkpJRobWllrWdma2U.jpg');
+  background-image: url('Bakgrund.jpg');
 }
 </style>
 <title>Webb Spel av Linus Ström</title>
@@ -23,9 +23,9 @@ body {
 	<br>
 	<h1>Spel:</h1>
 	<br>
-	<button id="Par i Svar" type="button" class="button" style="background-image: url('https://wallpaperaccess.com/full/1963258.png'); font-size: 60px" onclick="document.location='Par i Svar/Par i Svar.html'">Par i Svar</button>
+	<button id="Par i Svar" type="button" class="button" style="background-image: url('Par i Svar knapp Bakgrund.png'); font-size: 60px" onclick="document.location='Par i Svar/Par i Svar.html'">Par i Svar</button>
 	<br>
 	<br>
-	<button id="Tre i Rad" type="button" class="button" style="background-image: url('https://wallpaperaccess.com/full/2078969.jpg'); font-size: 60px" onclick="document.location='Tre i Rad/index.html'">Tre i Rad</button>
+	<button id="Tre i Rad" type="button" class="button" style="background-image: url('Tre i Rad knapp Bakgrund.jpg'); font-size: 60px" onclick="document.location='Tre i Rad/index.html'">Tre i Rad</button>
 </body>
 </html>
